<resources>
    <string name="app_name">ClassX</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_forums">Forums</string>
    <string name="title_messages">Messages</string>
    <string name="title_settings">Settings</string>
    <string name="title_forum_thread">Thread</string>
    <string name="title_forum_calendar">Calendar</string>
    <string name="title_forum_settings">Settings</string>

    <string name="add_tallo_account">Add Tallo Account</string>
    <string name="add_twitter_account">Add Twitter Account</string>
    <string name="type_bio_in_here">Type bio in here …</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="title_activity_forum_thread">ForumThreadActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="create_forum">Create Forum</string>
    <string name="join_private_forum">Join Private Forum</string>
    <string name="join_public_forum">Join Public Forum</string>

    <string name="menu_calendar">Calendar</string>
    <string name="menu_thread">Thread</string>
    <string name="menu_forum_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_forum_navigation">ForumNavigationActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="privacy">Privacy</string>
    <string name="theme">Theme</string>
    <string name="sound_and_display">Sound and Display</string>
    <string name="change_password">Change Password</string>
    <string name="todo">TODO</string>
</resources>