<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.classx.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.classx.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_forums"
        android:name="com.example.classx.ui.forums.fragment.ForumsFragment"
        android:label="@string/title_forums"
        tools:layout="@layout/fragment_forums" />

    <fragment
        android:id="@+id/nav_messages"
        android:name="com.example.classx.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.classx.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>