<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_forum_thread">


    <fragment
        android:id="@+id/nav_forum_thread"
        android:name="com.example.classx.ui.forums.navigation.thread.ForumThreadFragment"
        android:label="@string/title_forum_thread"
        tools:layout="@layout/fragment_forum_thread" />

    <fragment
        android:id="@+id/nav_forum_calendar"
        android:name="com.example.classx.ui.forums.navigation.calendar.ForumCalendarFragment"
        android:label="@string/title_forum_calendar"
        tools:layout="@layout/fragment_forum_calendar" />
    <fragment
        android:id="@+id/nav_forum_settings"
        android:name="com.example.classx.ui.forums.navigation.settings.ForumSettingsFragment"
        android:label="@string/title_forum_settings"
        tools:layout="@layout/fragment_forum_settings" />

</navigation>