<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/change_password"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/change_password"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/forwardArrow1IV"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/text_off_color" />

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/soundAndDisplay"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/sound_and_display"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/forwardArrow2IV"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/text_off_color" />


        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/theme"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/theme"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/forwardArrow3IV"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/text_off_color" />

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/privacy"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/privacy"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/forwardArrow4IV"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/text_off_color" />

        <LinearLayout
            android:id="@+id/row5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/help"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/help"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/forwardArrow5IV"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/text_off_color" />

        <LinearLayout
            android:id="@+id/row6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/about"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/about"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/forwardArrow6IV"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>


        <Button
            android:id="@+id/spacerView"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/dark_background"
            android:clickable="false"
            android:focusable="false" />

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sign_out_button"
            android:padding="25dp"
            android:text="@string/sign_out"
            android:textColor="@color/text_color"
            android:textSize="24sp" />
    </LinearLayout>
</ScrollView>