<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.activities.SignUpActivity">

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.6"
        android:background="@color/background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newUsernameET"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="194dp"
        android:background="@drawable/rounded_box"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newPasswordET"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_box"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/newUsernameET"
        app:layout_constraintStart_toStartOf="@+id/newUsernameET"
        app:layout_constraintTop_toBottomOf="@+id/newUsernameET" />

    <EditText
        android:id="@+id/confirmNewPasswordET"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_box"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/newUsernameET"
        app:layout_constraintStart_toStartOf="@+id/newUsernameET"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordET" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="192dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_blue"
        android:fontFamily="@font/cabin"
        android:onClick="signUp"
        android:text="Sign Up"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmNewPasswordET" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="212dp"
        android:layout_height="141dp"
        app:layout_constraintBottom_toTopOf="@+id/newUsernameET"
        app:layout_constraintEnd_toEndOf="@+id/newUsernameET"
        app:layout_constraintStart_toStartOf="@+id/newUsernameET"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/classx_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>